# HLA-PepClust

./: .gitattributes  .gitignore  Dockerfile  README.md  config.py  data_processing.ipynb  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: matrix.yml  python-package.yml  test-hla-pepclust.yml
CLI/: __init__.py  cluster_search.py  config.py  logger.py  main.py  process_logs.py  test_imagegrid.py
HLA_PEPCLUST.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  celery_tasks.py  routes.py
app/templates/: report.html  upload_form.html
assets/results/: clust-search-result.html
cli/: __init__.py  cluster_search.py  config.py  database_gen.py  html_config.py  imagegrid.py  logger.py  main.py  process_logs.py  utils.py
data/: command.run.txt
data/9mersonly/: 27152_report.html
data/D105heartW632_361712_originally_labeled_D120/: D105heart_361712_report.html
data/D105heartW6:32_361712_originally_labeled_D120/: log.txt
data/D90_HLA_3844874/: D90_HLA_3844874_report.html  log.txt
data/ref_data/: dataconfig.json  human.db  mouse.db
data/test/: allotype_comparison.html  allotype_matches.csv  allotype_matches_.csv  allotype_matches_1of6.csv  allotype_matches_5of6.csv  peptide_cluster_results.csv  peptide_clusters.html  peptide_properties.html  peptide_visualization.html  sequence_motifs.html
docs/corr-data/: corr_matrix.csv
example/: HLA_PepClust_testing.ipynb
example/clust_result/: clust-search-result.html  hla_correlation_data.json  immunolyser-out.html  immunolyser-out.js
test/: main_test.py
(+542 files in other folders)
