[tool.poetry]
name = "HLA-cluster-search"
version = "0.1.0-dev"
description = "CLI tool for cluster search"
authors = ["Sanjay SG Krishna sanjya.sondekopppagopalakrishna@monash.edu"]
packages = [{ include = "cli" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
rich = "^13.0"
pandas = "^2.2.3"
matplotlib = "^3.9.4"
seaborn = "^0.13.2"
rich-argparse = "^1.7.0"

[tool.poetry.scripts]
cluster-search = "cli.main:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

